--- a/client/src/components/ModalPhotoInset/ModalPhotoInset.css
+++ b/client/src/components/ModalPhotoInset/ModalPhotoInset.css
@@ -1,3 +1,20 @@
+.modal-photo-inset {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+}
+
 .modal-photo-inset > img {
   height: auto;
   margin: 40px 0px 40px 0px;
